--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
@@ -3,12 +3,12 @@
     ViewBag.Title = Model.HospitalDoctorId > 0 ? "Update Hospital Doctor" : "Add Hospital Doctor";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()" };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetDepartmentAndBuildingByCentreCode()" };
     // DropdownViewModel buildingDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetOrganisationCentrewiseBuildingByCentreCode()" };
     // DropdownViewModel buildingRoomDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetOrganisationCentrewiseBuildingRoomsByCentreCode()" };
     // DropdownViewModel employeeDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetEmployeeMasterByCentreCode()" };
     DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode };
-    
+
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -21,11 +21,11 @@
                             <div class="col">
                                 @if (Model.HospitalDoctorId > 0)
                                 {
-                                    <h4 class="card-title">Update Hospital Doctor</h4>
+                                    <h4 class="card-title">Update Doctor Details: @Model.FirstName @Model.LastName</h4>
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create Hospital Doctor</h4>
+                                    <h4 class="card-title">Create Doctor</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
@@ -65,58 +65,66 @@
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.OrganisationCentrewiseBuildingRoomId, new { @class = "form-label required" })
-                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.CentrewiseBuildingRooms.ToString(),
                                    DropdownName = "OrganisationCentrewiseBuildingRoomId",
                                    DropdownSelectedValue = Model.OrganisationCentrewiseBuildingRoomId
                                     .ToString(),
                                    Parameter = Model.SelectedCentreCode
-                               }) 
+                               })
                                         @Html.ValidationMessageFor(x => x.OrganisationCentrewiseBuildingRoomId)
                                     </div>
                                 </div>
-                          
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    <div class="md-3">
-                                        @Html.LabelFor(x => x.EmployeeId, new { @class = "form-label required"})
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                               {
-                                   DropdownType = DropdownTypeEnum.Employee.ToString(),
-                                   DropdownName = "EmployeeId",
+
+                                <div class="row">
+                                    <div class="col-lg-3">
+                                        <div class="md-3">
+
+                                            @Html.LabelFor(x => x.EmployeeId, new { @class = "form-label required" })
+                                            @if (Model.HospitalDoctorId > 0)
+                                            {
+                                                @Html.HiddenFor(x => x.EmployeeId)
+                                            }
+                                            else
+                                            {
+                                                @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                                   {
+                                       DropdownType = DropdownTypeEnum.UnAssociatedEmployeeList.ToString(),
+                                       DropdownName = "EmployeeId",
                                        DropdownSelectedValue = Model.EmployeeId
-                                    .ToString(),
+                                        .ToString(),
                                        Parameter = Model.SelectedCentreCode
-                               })
-                                        @Html.ValidationMessageFor(x => x.EmployeeId)
+                                   })
+                                                @Html.ValidationMessageFor(x => x.EmployeeId)
+                                            }
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.MedicalSpecilizationEnumId, new { @class = "form-label required " })
+                                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                                   {
+                                       DropdownSelectedValue = Model.MedicalSpecilizationEnumId.ToString(),
+                                       DropdownName = "MedicalSpecilizationEnumId",
+                                       GroupCode = DropdownTypeEnum.MedicalSpecilization.ToString()
+                                   })
+                                            @Html.ValidationMessageFor(x => x.MedicalSpecilizationEnumId)
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.WeekDayEnumIds, new { @class = "form-label required" })
+                                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                                        {
+                                        DropdownSelectedValue = Convert.ToString(Model.WeekDayEnumIds),
+                                        DropdownName = "WeekDayEnumIds",
+                                        GroupCode = DropdownTypeEnum.WeekDays.ToString()
+                                        })
+                                            @Html.ValidationMessageFor(x => x.WeekDayEnumIds)
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.MedicalSpecilizationEnumId, new { @class = "form-label required "})
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                               {
-                                   DropdownSelectedValue = Model.MedicalSpecilizationEnumId.ToString(),
-                                   DropdownName = "MedicalSpecilizationEnumId",
-                                   GroupCode = DropdownTypeEnum.MedicalSpecilization.ToString()
-                               })
-                                        @Html.ValidationMessageFor(x => x.MedicalSpecilizationEnumId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.WeekDayEnumIds, new { @class = "form-label required"})
-                                        @* @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                    {
-                                    DropdownSelectedValue = Model.WeekDayEnumIds.ToString(),
-                                    DropdownName = "WeekDayEnumIds",
-                                   GroupCode = DropdownTypeEnum.WeekDays.ToString()
-                                    }) *@
-                                        @Html.ValidationMessageFor(x => x.WeekDayEnumIds)
-                                    </div>
-                                </div>
-                            </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
