--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
@@ -29,9 +29,30 @@
                             </td>
                             <td class="text-center">
                                 <a href="../@controllerName/UpdateGymMembershipPlan?gymMembershipPlanId=@item.GymMembershipPlanId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?gymMembershipPlanIds=@item.GymMembershipPlanId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <!-- Delete Button Triggering Modal -->
+                                <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.GymMembershipPlanId"><i class="fas fa-trash-alt"></i></a>
+                                <!-- Delete Confirmation Modal -->
+                                <div class="modal fade" id="confirmDeleteModal_@item.GymMembershipPlanId" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Delete</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                Are you sure you want to delete this record?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                                <!-- Delete action with selectedCentreCode parameter -->
+                                                <a href="/@controllerName/Delete?gymMembershipPlanIds=@item.GymMembershipPlanId&selectedCentreCode=@Model.SelectedCentreCode" class="btn btn-danger" onclick="GymMembershipPlanController.Delete('@item.GymMembershipPlanId')">Delete</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </td>
                         </tr>
+                       
                     }
                 }
             </tbody>
@@ -39,4 +60,3 @@
     </div>
 </div>
 @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
-
