--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/Edit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/Edit.cshtml
@@ -31,52 +31,25 @@
                             @Html.HiddenFor(m => m.SelectedCentreCodeForSelf)
                             ;
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.AdminRoleCode, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.AdminRoleCode, new { @class = "form-control", @disabled="disabled" })
+                                        @Html.TextBoxFor(x => x.AdminRoleCode, new { @class = "form-control", @disabled = "disabled" })
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SanctionPostName, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.SanctionPostName, new { @class = "form-control" , @disabled="disabled" })
+                                        @Html.TextBoxFor(x => x.SanctionPostName, new { @class = "form-control", @disabled = "disabled" })
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsAttendaceAllowFromOutside, new { @class = "form-label" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsAttendaceAllowFromOutside, new { @class = "form-check-input" })
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsLoginAllowFromOutside, new { @class = "form-label" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsLoginAllowFromOutside, new { @class = "form-check-input" })
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MonitoringLevel, new { @class = "form-label required" })
-                                        @Html.DropDownListFor(m => m.MonitoringLevel, new SelectList(Model.MonitoringLevelList, "Value", "Text"), new {@class = "form-control" })
+                                        @Html.DropDownListFor(m => m.MonitoringLevel, new SelectList(Model.MonitoringLevelList, "Value", "Text"), new { @class = "form-control" })
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SelectedRoleWiseCentres, new { @class = "form-label required" })
                                         @if (Model.MonitoringLevel == AdminConstants.Self)
@@ -85,7 +58,7 @@
                                                 @Html.DisplayFor(m => m.SelectedCentreNameForSelf)
                                             </div>
                                             <div id="SelectedRoleWiseCentresDivId" style="display:none">
-                                                @Html.ListBoxFor(m => m.SelectedRoleWiseCentres, new SelectList(Model.AllCentreList, "CentreCode", "CentreName"),new {@class = "selectpicker form-control" })
+                                                @Html.ListBoxFor(m => m.SelectedRoleWiseCentres, new SelectList(Model.AllCentreList, "CentreCode", "CentreName"), new { @class = "selectpicker form-control" })
                                             </div>
                                         }
                                         else
@@ -94,12 +67,48 @@
                                                 @Html.DisplayFor(m => m.SelectedCentreNameForSelf)
                                             </div>
                                             <div id="SelectedRoleWiseCentresDivId">
-                                                @Html.ListBoxFor(m => m.SelectedRoleWiseCentres, new SelectList(Model.AllCentreList, "CentreCode", "CentreName"),new {@class = "selectpicker form-control "})
+                                                @Html.ListBoxFor(m => m.SelectedRoleWiseCentres, new SelectList(Model.AllCentreList, "CentreCode", "CentreName"), new { @class = "selectpicker form-control " })
                                             </div>
                                         }
                                     </div>
                                 </div>
-
+                                <div class="col-lg-6">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.DashboardFormEnumId, new { @class = "form-label" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.DashboardFormEnumId.ToString(),
+                                   DropdownName = "DashboardFormEnumId",
+                                   GroupCode = DropdownTypeEnum.DashboardForm.ToString(),
+                                   IsRequired=false
+                               })
+                                        @Html.ValidationMessageFor(x => x.DashboardFormEnumId, null)
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsAttendaceAllowFromOutside, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsAttendaceAllowFromOutside, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsLoginAllowFromOutside, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsLoginAllowFromOutside, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.SelectedCentreCode&SelectedDepartmentId=@Model.SelectedDepartmentId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
