--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
@@ -68,6 +68,13 @@
 										@Html.ValidationMessageFor(x => x.PlanTypeEnumId, null, new { id = "errorPlanTypeEnumId" })
 									</div>
 								</div>
+								<div class="col-lg-4">
+									<div class="mb-3">
+										@Html.LabelFor(x => x.SelectedGeneralServicesIds, new { @class = "form-label required" })
+										@Html.ListBoxFor(m => m.SelectedGeneralServicesIds, new SelectList(Model.AllGeneralServices, "InventoryGeneralItemLineId", "ItemName"), new { @class = "selectpicker form-control " })
+										@Html.ValidationMessageFor(x => x.SelectedGeneralServicesIds)
+									</div>
+								</div>
 							</div>
 							<div class="row">
 								<div class="col-lg-4">
