--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberPaymentHistory.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberPaymentHistory.cshtml
@@ -1,84 +1,39 @@
-﻿@model GymMemberMembershipPlanListViewModel
+﻿@model GymMemberSalesInvoiceListViewModel
 @{
-    ViewBag.Title = "Payment History";
+    Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-    Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
-    keyValuePairs.Add("GymMemberDetailId", Model.GymMemberDetailId.ToString());
-    keyValuePairs.Add("PersonId", Model.PersonId.ToString());
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
-<!-- Page Content-->
-<div class="page-content mt-5">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-2">
-                @Html.Partial("~/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml", keyValuePairs)
-            </div>
-            <div class="col-lg-10">
-                <div class="card">
-                    <div class="card-header">
-                        <span class="card-title">Payment History List - @Model.FirstName @Model.LastName</span>
-                        <p class="text-muted mb-0"></p>
-                    </div>
-                    <div class="card-body">
-                        @foreach (GymMemberMembershipPlanViewModel item in Model?.GymMemberMembershipPlanList)
-                        {
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            <span class="card-title">@item.GymMembershipPlan.MembershipPlanName (@item.GymMembershipPlan.PlanType)</span>
-                                        </div>
-                                        <div class="card-body">
-                                            <div class="row">
-                                                <div class="col-lg-3">
-                                                    <div class="mb-3 row">
-                                                        <label class="form-label" style="font-weight:bold !important">Transaction Date</label>
-                                                        <label class="form-label">@item.CreatedDate</label>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <div class="mb-3 row">
-                                                        <label class="form-label" style="font-weight:bold !important">Paid Amount</label>
-                                                        <label class="form-label">@item.PlanAmount</label>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <div class="mb-3 row">
-                                                        <label class="form-label" style="font-weight:bold !important">Plan Duration Type</label>
-                                                        <label class="form-label">@item.GymMembershipPlan.PlanDurationType</label>
-                                                    </div>
-                                                </div>
-                                                @if (string.Equals(item.GymMembershipPlan.PlanDurationType, "duration", StringComparison.InvariantCultureIgnoreCase))
-                                                {
-                                                    <div class="col-lg-3">
-                                                        <div class="mb-3 row">
-                                                            <label class="form-label" style="font-weight:bold !important">Start Date</label>
-                                                            <label class="form-label">@Convert.ToDateTime(@item.PlanStartDate).ToShortDateString()</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        <div class="mb-3 row">
-                                                            <label class="form-label" style="font-weight:bold !important">Expiration Date</label>
-                                                            <label class="form-label">@Convert.ToDateTime(@item.PlanDurationExpirationDate).ToShortDateString()</label>
-                                                        </div>
-                                                    </div>
-                                                }
-                                                <div class="col-lg-3">
-                                                    <div class="mb-3 row">
-                                                        <label class="form-label" style="font-weight:bold !important">Payment Mode</label>
-                                                        <label class="form-label">@item.PaymentTypeEnumId</label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        }
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="row">
+    @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
+    @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
+</div>
+<div class="row">
+    <div class="col-sm-12">
+        <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+            @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+            <tbody>
+                @if (Model?.GymMemberSalesInvoiceList?.Count > 0)
+                {
+                    foreach (var item in Model?.GymMemberSalesInvoiceList)
+                    {
+                        <tr>
+                            <td>@item.InvoiceNumber</td>
+                            <td>@item.TransactionDate</td>
+                            <td>@item.PlanType</td>
+                            <td>@item.MembershipPlanName</td>
+                            <td>@item.PlanStartDate</td>
+                            <td>@item.PlanDurationExpirationDate</td>
+                            <td>@item.BillAmount</td>
+                            <td>@item.PaymentType</td>
+
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
     </div>
 </div>
-<!-- end page content -->
+@Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
+
+
