--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberPaymentHistory.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberPaymentHistory.cshtml
@@ -1,47 +1,76 @@
 ﻿@model GymMemberSalesInvoiceListViewModel
 @{
-    Layout = null;
-    string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-    string actionName = ViewContext.RouteData.Values["action"].ToString();
+	Layout = null;
+	string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+	string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <div class="row">
-    @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
-    @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
+	@Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
+	@Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
 </div>
 <div class="row">
-    <div class="col-sm-12">
-        <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
-            @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
-            <tbody>
-                @if (Model?.GymMemberSalesInvoiceList?.Count > 0)
-                {
-                    foreach (var item in Model?.GymMemberSalesInvoiceList)
-                    {
-                        <tr>
-                            <td>@item.InvoiceNumber</td>
-                            <td>@item.TransactionDate.ToShortDateString()</td>
-                            <td>@item.PlanType</td>
-                            <td>
-                                @item.MembershipPlanName<br />
-                                @if (item.PlanDurationType == "Duration")
-                                {
-                                    <span style="font-size: 12px;">@item.PlanStartDate.ToShortDateString() to @item.PlanDurationExpirationDate.ToShortDateString()</span>
-                                }
-                                else
-                                {
-                                    <span style="font-size: 12px;">@item.PlanDurationInSession by @item.RemainingSessionCount</span>
-                                }
-                            </td>
-                            <td>@item.PlanStartDate.ToShortDateString()</td>
-                            <td>@item.PlanDurationExpirationDate.ToShortDateString()</td>
-                            <td>@item.BillAmount</td>
-                            <td>@item.PaymentType</td>
-                        </tr>
-                    }
-                }
-            </tbody>
-        </table>
-    </div>
+	<div class="col-sm-12">
+		<table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+			@Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+			<tbody>
+				@if (Model?.GymMemberSalesInvoiceList?.Count > 0)
+				{
+					foreach (var item in Model?.GymMemberSalesInvoiceList)
+					{
+						<tr>
+							<td><i class="fas fa-file-invoice"></i> @item.InvoiceNumber</td>
+							<td class="date"><i class="fa fa-calendar icon"></i> @item.TransactionDate.ToShortDateString()</td>
+							<td>@item.PlanType</td>
+							<td>
+								<div class="plan-details">
+									@item.MembershipPlanName<br />
+									@if (item.PlanDurationType == "Duration")
+									{
+										<span style="font-size: 12px; font-style: italic;">
+											<i class="fa fa-calendar-alt icon"></i> @item.PlanStartDate.ToShortDateString() to @item.PlanDurationExpirationDate.ToShortDateString()
+										</span>
+									}
+									else
+									{
+										<span style="font-size: 12px; font-style: italic;">
+											<i class="fa fa-clock icon"></i> Session: @item.PlanDurationInSession by @item.RemainingSessionCount
+										</span>
+									}
+								</div>
+							</td>
+							<td>@item.BillAmount</td>
+							<td>
+								@if (item.PaymentType.Equals("Cash", StringComparison.OrdinalIgnoreCase))
+								{
+									<i class="fas fa-coins"></i>
+								}
+								else
+								{
+									<i class="fas fa-credit-card"></i>
+								}
+								@item.PaymentType
+							</td>
+							<td>
+								@if (item.PaymentReceivedBy.Equals("Super Admin", StringComparison.OrdinalIgnoreCase))
+								{
+									<i class="fas fa-crown"></i>
+								}
+								else if (item.PaymentReceivedBy.Equals("Admin", StringComparison.OrdinalIgnoreCase))
+								{
+									<i class="fas fa-user-shield"></i>
+								}
+								else
+								{
+									<i class="fas fa-user"></i>
+								}
+								@item.PaymentReceivedBy
+							</td>
+						</tr>
+					}
+				}
+			</tbody>
+		</table>
+	</div>
 </div>
 @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
 
