--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_List.cshtml
@@ -1,17 +1,17 @@
 ﻿@model GymMemberSalesInvoiceListViewModel
 @{
-	Layout = null;
-	string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-	string actionName = ViewContext.RouteData.Values["action"].ToString();
+    Layout = null;
+    string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <div class="row">
-	@Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
-	@Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
+    @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
+    @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
 </div>
 <div class="row">
-	<div class="col-sm-12 table-responsive">
-		<table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
-			@Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+    <div class="col-sm-12 table-responsive">
+        <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+            @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
 			<tbody>
 				@if (Model?.GymMemberSalesInvoiceList?.Count > 0)
 				{
@@ -19,6 +19,7 @@
 					{
 						<tr>
 							<td><i class="fas fa-file-invoice"></i> @item.InvoiceNumber</td>
+							<td>@item.FirstName</td>
 							<td class="date"><i class="fa fa-calendar icon"></i> @item.TransactionDate.ToShortDateString()</td>
 							<td>@item.PlanType</td>
 							<td>
@@ -70,10 +71,7 @@
 					}
 				}
 			</tbody>
-		</table>
-	</div>
+        </table>
+    </div>
 </div>
-
 @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
-
-
